[package]
edition = "2021"
name = "rusty_chrome_password"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrome_password = "0.2.1"
napi = { version = "2.16.7", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"
tabled = "0.19.0"

[build-dependencies]
napi-build = "2.1.6"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
